Manifest-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetris-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:609898225296:certificate/3df4b77d-88cb-4f84-b367-6693b4c2e775

spec:
  ingressClassName: alb
  rules:
    - host: jamdarwadi.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetris-service
                port:
                  number: 80
